--- a/src/style.css
+++ b/src/style.css
@@ -6,15 +6,6 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css');
 
-.containerleft{
-        margin-left: 15%;
-        margin-right: 10%;
-}
-.containerslick{
-     margin-left:15%;
-     margin-right: 15%;
-
-}
 
 @layer base{
     html,body{
@@ -23,8 +14,11 @@
     }
 }
 .flag-select button {
-@apply h-12 border-2 border-gray-300 pl-1 ml-4 font-medium bg-white -mr-4 transition-colors hover:border-secondary-brand-color
+@apply h-12 border-2 border-gray-300 md:pl-1 md:ml-4 font-medium bg-white md:-mr-4 transition-colors  hover:border-secondary-brand-color
 }
 .flag-language button {
-    @apply h-12   bg-brand-color border-2  mt-1 font-medium transition-colors !text-white text-xs opacity-80  border-opacity-20 pl-1 ml-4 font-light -mr-4
+    @apply h-12   bg-brand-color border-2  md:mt-1 font-medium transition-colors !text-white text-xs opacity-80 border-opacity-20 md:pl-1 md:ml-4 font-light md:-mr-4
+    }
+    .ReactCollapse--collapse {
+        @apply transition-all
     }
