--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,13 @@
     .ReactCollapse--collapse {
         @apply transition-all
     }
+.yemek{
+    width:100%;
+    height: 100vh;
+
+}
+video{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+}
